# sandman_web

./: CONTRIBUTING.md  LICENSE.txt  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml  pytest.yml
sandman_web/: __init__.py  reports.py  status.py
sandman_web/reports/: reports.py
sandman_web/reports/templates/: report.html
sandman_web/static/: style.css
sandman_web/status/: status.py
sandman_web/status/templates/: status.html
sandman_web/templates/: base.html
tests/: conftest.py  test_init.py  test_reports.py
tests/data/reports/: report_test_event_invalid.rpt  report_test_event_invalid_info.rpt  report_test_event_invalid_when.rpt  report_test_event_missing_info.rpt  report_test_event_missing_when.rpt  report_test_event_type_info.rpt  report_test_event_type_when.rpt  report_test_invalid_start.rpt  report_test_invalid_version.rpt  report_test_missing_version.rpt  report_test_type_start.rpt  report_test_type_version.rpt  report_test_valid_events.rpt  sandman2024-12-08.rpt  sandman2026-03-02.rpt
tests/reports/: test_reports.py
tests/status/: test_status.py
unit_tests/: test_fail.py
